--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,9 @@
-[build]
-target = "thumbv7em-none-eabihf"
+[unstable]
+build-std = ["core", "compiler_builtins"]
+build-std-features = ["compiler-builtins-mem"]
 
-#[target.arm-unknown-linux-gnueabihf]
-#linker = "arm-linux-gnueabihf-gcc"
+[build]
+target = "x86_64.json"
+
+[target.'cfg(target_os = "none")']
+runner = "bootimage runner"
